nextcloud/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60000"
spec:
  tls:
  - hosts:
    - nextcloud.lag0.com.br
    secretName: lag0-nextcloud-certificate
  rules:
  - host: nextcloud.lag0.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-release
            port:
              number: 80
  ingressClassName: nginx
